--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Odin Recipes</h1>
-  <a href="recipes/spicyVeganCarrotSoup.html">Spicy Vegan Carrot Soup</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Odin Recipes</h1>
+    <ul>
+      <li>
+        <a href="recipes/spicyVeganCarrotSoup/spicyVeganCarrotSoup.html"
+          >Spicy Vegan Carrot Soup
+        </a>
+      </li>
+      <li>
+        <a href="recipes/veganBulgogi/veganBulgogi.html">Vegan Bulgogi</a>
+      </li>
+      <li>
+        <a href="recipes/veganKorma/veganKorma.html">Vegan Korma</a>
+      </li>
+    </ul>
+  </body>
 </html>
